# warao_spanish_machine_translation_cs230

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data_processing/: Process_BibleIs_Bible_Verses.ipynb  clean_all_data.ipynb  combine_clean_parallel_data.ipynb  pdf_plumber.ipynb  splitting_sentences.ipynb  warao_bible_pdf_plumber.ipynb
data_processing/data_scraping/: main.py  pairs.py
data_processing/monolingual_data/: warao_bible_pdf_plumber.ipynb
data_processing/parallel_data/: combine_clean_parallel_data.ipynb  pdf_plumber.ipynb  process_bibleis__verses.ipynb  split_dataset.py  splitting_sentences.ipynb
data_processing/parallel_data/dictionary/: Dictionary_Processor-2.ipynb  Dictionary_Processor.ipynb
models/: LSTM.ipynb
models/RNN/: RNN_baseline.ipynb
models/benchmarking/: benchmarking_final.py
models/continual_pretraining/: final_continual_pretraining.py
models/finetuning_plms/: full_finetuning.py  m2m_100_418m.py  mbart_lafand_adaptation.py  tokenizer_analysis.py
models/mbart_finetune/: environment.yml  mBART_lafand_adaptation.ipynb
models/mbart_finetune/mbart50-finetuned-warao-es/: mBART_lafand_adaptation.ipynb
