[project]
name = "warao-spanish-machine-translation-cs230"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "protobuf>=6.33.1",
    "pytesseract>=0.3.13",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
