[project]
name = "warao-spanish-machine-translation-cs230"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "peft>=0.18.0",
    "protobuf>=6.33.1",
    "pytesseract>=0.3.13",
    "sacrebleu==2.0.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]
